...
                    </TextBase>
                    <Controller
                        control={form.control}
                        name="description"
                        render={({ field: { onChange, onBlur, value } }) => (
                            <TextInput
                                testID="restaurant-description-input"
                                style={[styles.input, styles.textArea]}
                                placeholder="Escribe información del restaurante"
                                onBlur={onBlur}
                                onChangeText={onChange}
                                value={value}
                                multiline
...
                                editable={!isSubmitting}
                            />
                        )}
                    />
                </View>
                <Pressable
                    testID="submit-restaurant-form"
                    onPress={submitForm}
                    style={[styles.button, isSubmitting && styles.disabledButton]}
                    disabled={isSubmitting}
                >
                    {isSubmitting ? (
                        <ActivityIndicator size="small" color={colors.tailorBlack} />
...
